--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "react-hook-form": "^7.53.2",
     "react-map-interaction": "^2.1.0",
     "react-router-dom": "^7.0.1",
+    "react-zoom-pan-pinch": "^3.6.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.1",
