--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "react-map-interaction": "^2.1.0",
     "react-router-dom": "^7.0.1",
     "react-zoom-pan-pinch": "^3.6.1",
+    "recharts": "^2.15.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.1",
