--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "react-hook-form": "^7.53.2",
     "react-map-interaction": "^2.1.0",
     "react-router-dom": "^7.0.1",
+    "react-spinners": "^0.15.0",
     "react-zoom-pan-pinch": "^3.6.1",
     "recharts": "^2.15.0",
     "tailwind-merge": "^2.5.5",
