--- a/server/.gitignore
+++ b/server/.gitignore
@@ -8,6 +8,6 @@ __pycache__/
 # Flask environment variables
 .env
 
-server/controllers/client_secret.json
-server/weights
+controllers/client_secret.json
+weights/
 
