--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "embla-carousel-react": "^8.5.1",
     "fabric": "^6.5.3",
     "lucide-react": "^0.460.0",
+    "pica": "^9.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
